fixed overflow issue

--- a/src/containers/Home.css
+++ b/src/containers/Home.css
@@ -1,7 +1,7 @@
 .showcase {
   top: 0;
   right: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   display: flex;
   padding: 0px 200px 0px 200px;
@@ -13,7 +13,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   object-fit: cover;
   opacity: 0.8;
@@ -23,7 +23,7 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background: #778b6b;
   mix-blend-mode: overlay;
@@ -42,7 +42,7 @@
 
 .vidText h3 {
   font-size: 3em;
-  line-height: 1em;
+  line-height: 2em;
 }
 
 .intro,
@@ -55,6 +55,7 @@
   flex-direction: column;
   position: relative;
   padding: 0px 200px 0px 200px;
+  overflow: hidden;
 }
 
 .intro .bgText {
@@ -143,7 +144,7 @@
   height: 100vh;
   flex-direction: column;
   position: relative;
-  padding: 0px 200px 0px 200px;
+  overflow: hidden;
 }
 .newProducts .sectionLogoTitle {
   padding-bottom: 2.3rem;
@@ -151,9 +152,8 @@
 
 .portfolio img {
   max-height: 60vh;
-  /* max-width: 45vw; */
 }
 
 .newProducts img {
-  max-height: 75vh;
+  max-height: 100vh;
 }
